@@ -1,6 +1,7 @@
 V.Next
 ---------
 - [PATCH] Add JWT header field for KDF version (#2220)
+- [MINOR] Catch unknown Keystore errors during decryption (#2255)
 - [MINOR] Changes to launch AEA app from Broker's WebView (#2264)
 
 V.16.2.0
